# Computer-Networks

ErrorD/: ErrorD  data.txt  go.mod  main.go  output.txt
ErrorD/checksum/: check.go  flips.go  generator.go  partialsum.go
ErrorD/crc/: check.go  crcPolynomials.go  generate.go  mod2div.go  mod2div_test.go  stringXOR.go  stringXOR_test.go
ErrorD/lrc/: check.go  generate.go
ErrorD/utils/: myerror.go
ErrorD/vrc/: check.go  generate.go
FlowControl/: .gitignore  CMakeLists.txt  README.md  channel.cpp  constants.hpp  crc.hpp  execute  frameutils.hpp  receiver.hpp  receivercontroller.cpp  semaphore.hpp  sender.hpp  sendercontroller.cpp  shared_memory.hpp  test.cpp  test2.cpp  test3.cpp  test4.cpp  threadSafeQueue.hpp  typedefs.hpp  utils.hpp
FlowControl/include/: library.h
FlowControl/receivers/: base.hpp  gobackN.hpp  selectiverepeat.hpp  stopNwait.hpp
FlowControl/senders/: base.hpp  gobackN.hpp  selectiverepeat.hpp  stopNwait.hpp
